<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.gmappadmin.AdminAccountActivity"
    android:background="@xml/background_selector_inverso">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:layout_marginBottom="20dp">
                <!--<ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/user"
                    android:contentDescription="Logo de la app"
                    tools:ignore="HardcodedText" />-->
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/palmeras"
                    app:civ_border_width="0dp"
                    app:civ_border_color="#FF000000"
                    android:layout_centerInParent="true"
                    tools:ignore="MissingConstraints" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/float_label_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/LoginTextField">
                    <EditText
                        android:id="@+id/edtNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/hint_nombre"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textCursorDrawable="@null"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/float_label_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/LoginTextField">
                    <EditText
                        android:id="@+id/edtApellido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/hint_apellido"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textCursorDrawable="@null"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/float_label_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/LoginTextField">
                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/hint_email"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textCursorDrawable="@null"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/float_label_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/LoginTextField">
                    <EditText
                        android:id="@+id/edtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPhonetic"
                        android:hint="@string/hint_username" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/float_label_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:theme="@style/LoginTextField">
                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:hint="@string/hint_password"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textCursorDrawable="@null"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/float_label_passwordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:theme="@style/LoginTextField">
                    <EditText
                        android:id="@+id/edtPasswordConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:hint="@string/hint_password_confirm"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textCursorDrawable="@null"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnRegistrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/texto_boton_registrar"
                    android:theme="@style/SecondaryButton"
                    android:onClick="registrar"
                    tools:ignore="OnClick" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

