<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#70caee"
    tools:context=".ConfigActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:title="Configuración"
            app:titleTextColor="@color/white" />
        <!--android:background="@color/colorSecundaryDark"
        app:popupTheme="@style/AppTheme.PopupOverlay"-->
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/float_label_tarifa_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/edtTarifaAuto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_tarifa_auto"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/float_label_tarifa_camioneta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/edtTarifaCamioneta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_tarifa_camioneta"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/float_label_tarifa_moto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp">
                <EditText
                    android:id="@+id/edtTarifaMoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_tarifa_moto"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@android:color/darker_gray" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/float_label_tolerancia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp">
                <EditText
                    android:id="@+id/edtTolerancia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_tolerancia"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textCursorDrawable="@null"/>
            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/darker_gray" />

            <CheckBox
                android:id="@+id/chk_hora_cierre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="Permitir cierre parcial de jornada"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/float_label_parcial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:theme="@style/LoginTextField">
                <EditText
                    android:id="@+id/edtHoraCierre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_hora_cierre"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textAlignment="textStart"
                    android:enabled="false"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/float_label_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp">
                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email_send"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textCursorDrawable="@null"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/darker_gray" />
            <Button
                android:id="@+id/btnGuardarTarifa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/action_guardar_cambios"
                android:textStyle="bold"
                android:theme="@style/SecondaryButton" />
            <!--<Button
                android:id="@+id/btnGuardarHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/action_guardar_cambios"
                android:textStyle="bold"
                android:layout_marginBottom="50dp"
                android:theme="@style/SecondaryButton" />-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>